# designer

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  SPEC.md  deny.toml  justfile  package-lock.json  package.json
.claude/: settings.json
.github/: dependabot.yml
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: commands.rs  commands_agents.rs  commands_friction.rs  commands_git.rs  commands_learn.rs  commands_local.rs  commands_reports.rs  commands_roadmap.rs  commands_safety.rs  core.rs  core_agents.rs  core_friction.rs  core_git.rs  core_learn.rs  core_local.rs  core_proposals.rs  core_roadmap.rs  core_safety.rs  crash.rs  events.rs  ipc.rs  ipc_agents.rs  lib.rs  main.rs  menu.rs  settings.rs  store_watcher.rs  test_support.rs  updater.rs
apps/desktop/src-tauri/tests/: activity_bridge_e2e.rs  ipc_smoke.rs  perf_budget.rs  round_trip_e2e.rs  updater_config.rs
core-docs/: README.md  chat-ui-audit.md  component-manifest.json  design-language.md  feedback.md  foundations.md  generation-log.md  history.md  (+13 more)
crates/designer-claude/: Cargo.toml  SIGINT-SPIKE.md
crates/designer-claude/src/: claude_code.rs  inbox_permission.rs  lib.rs  mock.rs  orchestrator.rs  permission.rs  stream.rs  watcher.rs
crates/designer-claude/tests/: claude_live.rs  mock.rs  permission_prompt_translator.rs
crates/designer-claude/tests/fixtures/inboxes/: team-lead.json  teammate.json
crates/designer-claude/tests/fixtures/permission_prompt/: bash.json  edit.json  write.json
crates/designer-claude/tests/fixtures/stream_json/: representative-events.jsonl  two-member-team-full.jsonl
crates/designer-claude/tests/fixtures/team_config/: dir-recon.config.json
crates/designer-cli/: Cargo.toml
crates/designer-cli/src/: main.rs
crates/designer-core/: Cargo.toml
crates/designer-core/migrations/: 0001_initial.sql
crates/designer-core/src/: anchor.rs  domain.rs  error.rs  event.rs  finding.rs  ids.rs  lib.rs  projection.rs  proposal.rs  store.rs  time.rs
crates/designer-core/src/roadmap/: anchors.rs  derive.rs  mod.rs  parser.rs  tree.rs
crates/designer-core/tests/: roadmap_real_file.rs  store.rs  store_ordering.rs
crates/designer-git/: Cargo.toml
crates/designer-git/src/: lib.rs
crates/designer-git/tests/: git_ops.rs
crates/designer-learn/: CONTRIBUTING.md  Cargo.toml
crates/designer-learn/examples/: build_approval_always_granted_fixtures.rs
crates/designer-learn/src/: defaults.rs  event_shape.rs  example_detector.rs  lib.rs  session_input.rs
crates/designer-learn/src/detectors/: approval_always_granted.rs  compaction_pressure.rs  config_gap.rs  cost_hot_streak.rs  domain_specific_in_claude_md.rs  memory_promotion.rs  mod.rs  multi_step_tool_sequence.rs  repeated_correction.rs  repeated_prompt_opening.rs  scope_false_positive.rs
crates/designer-learn/tests/: approval_always_granted.rs  compaction_pressure.rs  config_gap.rs  cost_hot_streak.rs  domain_specific_in_claude_md.rs  example_fixture.rs  memory_promotion.rs  multi_step_tool_sequence.rs  repeated_correction.rs  repeated_prompt_opening.rs  scope_false_positive.rs
crates/designer-learn/tests/fixtures/approval_always_granted/: expected.json  input.jsonl
crates/designer-learn/tests/fixtures/approval_always_granted_under_threshold/: input.jsonl
crates/designer-learn/tests/fixtures/approval_always_granted_with_denial/: input.jsonl
crates/designer-learn/tests/fixtures/compaction_pressure/: README.md  expected.json  input.jsonl
crates/designer-learn/tests/fixtures/compaction_pressure_under_threshold/: README.md  input.jsonl
crates/designer-learn/tests/fixtures/config_gap/: README.md
crates/designer-learn/tests/fixtures/config_gap/negative_hook_present/.claude/: settings.json
crates/designer-learn/tests/fixtures/cost_hot_streak/: README.md  expected.json  input.jsonl
crates/designer-learn/tests/fixtures/cost_hot_streak_even_spend/: README.md  input.jsonl
crates/designer-learn/tests/fixtures/cost_hot_streak_one_off/: README.md  input.jsonl
crates/designer-learn/tests/fixtures/domain_specific_in_claude_md/: README.md
crates/designer-learn/tests/fixtures/domain_specific_in_claude_md/negative_generic/: CLAUDE.md
crates/designer-learn/tests/fixtures/domain_specific_in_claude_md/positive/: CLAUDE.md
crates/designer-learn/tests/fixtures/example/: README.md
crates/designer-learn/tests/fixtures/memory_promotion/: README.md
crates/designer-learn/tests/fixtures/memory_promotion/negative_already_covered/: CLAUDE.md
crates/designer-learn/tests/fixtures/memory_promotion/negative_ephemeral/: CLAUDE.md
crates/designer-learn/tests/fixtures/memory_promotion/positive/: CLAUDE.md  expected.json
crates/designer-learn/tests/fixtures/multi_step_tool_sequence/: expected.json  input.jsonl
crates/designer-learn/tests/fixtures/multi_step_tool_sequence_distinct/: input.jsonl
crates/designer-learn/tests/fixtures/multi_step_tool_sequence_under_threshold/: input.jsonl
crates/designer-learn/tests/fixtures/repeated_correction/: README.md  expected.json  input.jsonl
crates/designer-learn/tests/fixtures/repeated_correction_negative/: README.md  input.jsonl
crates/designer-learn/tests/fixtures/repeated_prompt_opening/: expected.json  input.jsonl
crates/designer-learn/tests/fixtures/repeated_prompt_opening_negative_count/: input.jsonl
crates/designer-learn/tests/fixtures/repeated_prompt_opening_negative_similarity/: input.jsonl
crates/designer-learn/tests/fixtures/scope_false_positive/: README.md  expected.json  input.jsonl
crates/designer-learn/tests/fixtures/scope_false_positive_negative/: input.jsonl
crates/designer-local-models/: Cargo.toml
crates/designer-local-models/src/: cache.rs  lib.rs  ops.rs  protocol.rs  ratelimit.rs  runner.rs
crates/designer-local-models/tests/: ops.rs  real_helper.rs  runner_boot.rs
crates/designer-safety/: Cargo.toml
crates/designer-safety/src/: approval.rs  cost.rs  csp.rs  lib.rs  scope.rs
crates/designer-safety/tests/: gates.rs
(+147 files in other folders)
