[package]
name = "designer-claude"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
designer-core.workspace = true
designer-audit.workspace = true
tokio.workspace = true
async-trait.workspace = true
futures.workspace = true
tokio-stream.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
time.workspace = true
notify.workspace = true
notify-debouncer-mini.workspace = true
uuid.workspace = true
parking_lot.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
