[package]
name = "designer-claude"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
designer-core.workspace = true
designer-audit.workspace = true
tokio.workspace = true
async-trait.workspace = true
futures.workspace = true
tokio-stream.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
time.workspace = true
notify.workspace = true
notify-debouncer-mini.workspace = true
uuid.workspace = true
parking_lot.workspace = true
dashmap.workspace = true

# Phase 24 §5.4.2 — SIGINT interrupt mechanism. `libc::kill(pid,
# SIGINT)` is the production interrupt path (see SIGINT-SPIKE.md);
# unconditional dep because the orchestrator's `interrupt` impl uses
# it for every interrupt. `anyhow` stays optional — only the spike
# binary needs it for its `?` ergonomics.
libc = "0.2"
anyhow = { workspace = true, optional = true }

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[features]
# Gates integration tests that spawn a real `claude` subprocess. Off by
# default; hermetic CI (Tier 1) never enables it. Self-hosted-runner CI
# (Tier 2) and local dev runs enable via `--features claude_live`. See
# core-docs/adr/0001-claude-runtime-primitive.md and spec Decision 33.
# Also gates the Phase 24 P2 SIGINT spike binary so a normal
# `cargo build --workspace` never compiles it.
claude_live = ["dep:anyhow"]

[[bin]]
name = "sigint_spike"
path = "src/bin/sigint_spike.rs"
required-features = ["claude_live"]
