[package]
name = "designer-desktop"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Designer — local-first AI product cockpit (Tauri shell)"

[lib]
name = "designer_desktop"
path = "src/lib.rs"

[[bin]]
name = "designer-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build.workspace = true

[dependencies]
designer-core.workspace = true
designer-claude.workspace = true
designer-safety.workspace = true
designer-audit.workspace = true
designer-local-models.workspace = true
designer-sync.workspace = true
designer-ipc.workspace = true
tauri.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
time.workspace = true
parking_lot.workspace = true
async-trait.workspace = true
thiserror.workspace = true
dark-light.workspace = true
once_cell.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
# Keychain read for surfacing Claude OAuth presence in Settings → Account.
# Read-only per Decision 26 — Designer never writes Claude's tokens.
security-framework = { workspace = true }

[dev-dependencies]
tempfile.workspace = true
