[package]
name = "designer-desktop"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
description = "Designer — local-first AI product cockpit (Tauri shell)"

[lib]
name = "designer_desktop"
path = "src/lib.rs"

[[bin]]
name = "designer-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build.workspace = true

[dependencies]
designer-core.workspace = true
designer-claude.workspace = true
designer-git.workspace = true
designer-safety.workspace = true
designer-audit.workspace = true
designer-local-models.workspace = true
designer-sync.workspace = true
designer-ipc.workspace = true
designer-learn.workspace = true
tauri.workspace = true
tauri-plugin-dialog.workspace = true
tauri-plugin-updater.workspace = true
tauri-plugin-process.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender = { workspace = true }
anyhow.workspace = true
time.workspace = true
parking_lot.workspace = true
async-trait.workspace = true
thiserror.workspace = true
dark-light.workspace = true
once_cell.workspace = true
sha2.workspace = true
hex.workspace = true
tempfile.workspace = true
notify-debouncer-mini.workspace = true
uuid.workspace = true
futures = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
# Keychain read for surfacing Claude OAuth presence in Settings → Account.
# Read-only per Decision 26 — Designer never writes Claude's tokens.
security-framework = { workspace = true }

[dev-dependencies]
# `tauri = { ..., features = ["test"] }` exposes `tauri::test::mock_app()`
# and the `MockRuntime` so integration tests can construct a real
# `AppHandle<MockRuntime>` without booting Wry. Used by
# `tests/activity_bridge_e2e.rs` to assert the activity bridge forwards
# orchestrator events onto the Tauri channel.
tauri = { workspace = true, features = ["test"] }

